feat: :memo: #20 oasのrequiredを見直し
